Updated cve-2016-5696 scripts to simplify deployment and removal

--- a/roles/cve/tasks/main.yml
+++ b/roles/cve/tasks/main.yml
@@ -2,5 +2,5 @@
 
 # CVE-2016-5696
 #   A bandaid fix. Remove when upstream kernels are patched. 
-- name: execute cve-2016-5696.sh
-  script: cve-2016-5696.sh
+- name: execute cve-2016-5696-add.sh
+  script: cve-2016-5696-add.sh
